Done some improvements based on FindBugs reports.